--- a/dev/scss/_variables.scss
+++ b/dev/scss/_variables.scss
@@ -1,4 +1,5 @@
 //font variables
+$heading-font: 'Roboto Condensed', sans-serif;
 $body-font: 'Roboto', sans-serif;
 $line-height: 1.4;
 $heading-size: 2rem;
