--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -1,4 +1,11 @@
 @charset "utf-8";
+@import "mixins";
+@import "reset";
+@import "variables";
+@import "wrapper";
+@import "hero";
+@import "wrapper";
+@import "body";
 
 // Place your Sass imports here...
 
