added scss files

--- a/dev/scss/_body.scss
+++ b/dev/scss/_body.scss
@@ -4,4 +4,8 @@ body {
     // background-color: map-get($colors, body-bg);
 
     // padding: $padding;
+    img {
+        width: $img-full;
+        height: auto;
+    }
 }
