--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -6,6 +6,8 @@
 @import "hero";
 @import "wrapper";
 @import "body";
+@import "customized";
+@import "productadvisor";
 
 // Place your Sass imports here...
 @import "footer";
