--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -3,11 +3,12 @@
 @import "reset";
 @import "variables";
 @import "wrapper";
+@import "hamburger";
 @import "hero";
 @import "wrapper";
 @import "body";
-
-// Place your Sass imports here...
 @import "footer";
+// Place your Sass imports here...
+
 
 
