added about media sign up sections

--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -8,6 +8,9 @@
 @import "body";
 @import "customized";
 @import "productadvisor";
+@import "about";
+@import "media";
+@import "signup";
 
 // Place your Sass imports here...
 @import "footer";
