--- a/dev/scss/_hamburger.scss
+++ b/dev/scss/_hamburger.scss
@@ -21,7 +21,6 @@ nav {
     width: 100%;
     height: 0;
     visibility: hidden;
-    overflow: hidden;
   }
   
   nav ul {
@@ -138,6 +137,14 @@ nav {
   }
 
   @media (min-width: 50em) {
+    .logo { 
+        width: 100%;
+    }
+    .logo img{
+        display:block;
+        margin-left: auto;
+        margin-right: auto; 
+    }
 
     .btn-menu {
       display: none;
@@ -146,7 +153,6 @@ nav {
     nav {
       width: 70%;
       visibility: visible;
-      height: auto;
     }
 
     nav ul {
