--- a/dev/scss/_hamburger.scss
+++ b/dev/scss/_hamburger.scss
@@ -24,8 +24,6 @@ nav {
   }
   
   nav ul {
-    padding: 0;
-    margin: 0;
     list-style: none;
     text-align: left;
     font-size: 25px;
@@ -136,11 +134,17 @@ nav {
     transform: rotate(-45deg);
   }
 
-  @media (min-width: 50em) {
+  @media (min-width: 640px) {
+    .navbar {
+      background-color: transparent;
+    }
+
     .logo { 
         width: 100%;
     }
+
     .logo img{
+        width: 250px;
         display:block;
         margin-left: auto;
         margin-right: auto; 
@@ -151,11 +155,13 @@ nav {
     }
   
     nav {
-      width: 70%;
+      display:block;
+      width: 60%;
       visibility: visible;
     }
 
     nav ul {
+      background-color: rgba(34, 34, 34, 0.6);
       display: flex;
       justify-content: space-around;
       padding: 0.5rem;
@@ -163,5 +169,9 @@ nav {
   
     nav a {
       border: none;
+    }
+
+    li.navnone {
+      display: none;
     }
 }
