--- a/dev/scss/_hero.scss
+++ b/dev/scss/_hero.scss
@@ -10,6 +10,8 @@
     position: relative;
 
     h1 {
+        position:relative;
+        top:100px;
         font-family: $heading-font;
         font-size: 2rem;
         text-transform: uppercase;
