working in mobile res

--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -4,6 +4,7 @@
 @import "variables";
 @import "wrapper";
 @import "hamburger";
+@import "jcarousel";
 @import "hero";
 @import "wrapper";
 @import "body";
@@ -13,6 +14,7 @@
 @import "media";
 @import "signup";
 @import "footer";
+
 
 
 
