--- a/dev/scss/_hero.scss
+++ b/dev/scss/_hero.scss
@@ -1,28 +1,29 @@
 #hero {
     @include flex-layout-column;
     @include margin-center;
-    padding: 2%;
-    background-image: url(../images/header-slider-img-01.jpg);
-    background-attachment: fixed;
-    background-size: cover;
-    min-height: 70vh;
-    background-repeat: no-repeat;
-    position: relative;
+    // padding: 2%;
+    // background-image: url(../images/header-slider-img-01.jpg);
+    // background-attachment: fixed;
+    // background-size: cover;
+    // min-height: 70vh;
+    // background-repeat: no-repeat;
+    // position: relative;
 
     h1 {
-        position:relative;
+        position:absolute;
         top:100px;
         font-family: $heading-font;
         font-size: 2rem;
         text-transform: uppercase;
         font-weight: bold;
         color: map-get($colors, heading-1);
-        padding: 5rem;
+        padding: 2rem;
+        z-index: 5;
     }
 
     .wave-white {
         position: absolute;
-        bottom: 0;
+        top: 572px;
         left: 0;
         right: 0;
     }
@@ -30,7 +31,10 @@
 }
 
 #hero-buttons {
+    position: absolute;
+    top: 400px;
     @include flex-column;
+    z-index: 5;
 }
 
 #hero-button {
