--- a/dev/scss/_install.scss
+++ b/dev/scss/_install.scss
@@ -77,6 +77,11 @@
     height:200px;
 }
 
+footer {
+    position:absolute;
+    z-index: 4;
+    bottom: 20px;
+}
 @media screen and (min-width: $breakpoint-tablet){
     #map {
         width: 50%;
