--- a/dev/scss/_variables.scss
+++ b/dev/scss/_variables.scss
@@ -14,7 +14,7 @@ $colors: (
     heading-2: #244A64,
     heading-3: #504F4F,
     text: #000,
-    bg-1: #439BD6,
+    bg-1: #009ddc,
     bg-2: #BDDCEF,
 
 );
