--- a/dev/scss/_hero.scss
+++ b/dev/scss/_hero.scss
@@ -11,9 +11,10 @@
 
     h1 {
         position:absolute;
-        top:100px;
+        top:250px;
         font-family: $heading-font;
         font-size: 2rem;
+        text-align: center;
         text-transform: uppercase;
         font-weight: bold;
         color: map-get($colors, heading-1);
