--- a/dev/scss/_hero.scss
+++ b/dev/scss/_hero.scss
@@ -1,17 +1,12 @@
 #hero {
     @include flex-layout-column;
     @include margin-center;
-    // padding: 2%;
-    // background-image: url(../images/header-slider-img-01.jpg);
-    // background-attachment: fixed;
-    // background-size: cover;
-    // min-height: 70vh;
-    // background-repeat: no-repeat;
-    // position: relative;
+    position: relative;
+    padding-bottom: 4%;
 
     h1 {
         position:absolute;
-        top:250px;
+        top: 150px;
         font-family: $heading-font;
         font-size: 2rem;
         text-align: center;
@@ -24,31 +19,49 @@
 
     .wave-white {
         position: absolute;
-        top: 572px;
         left: 0;
         right: 0;
+        bottom: 0;
     }
 
-}
-
-#hero-buttons {
-    position: absolute;
-    top: 400px;
-    @include flex-column;
-    z-index: 5;
-}
-
-#hero-button {
-    @include flex-center;
-    @include margin-center;
-    text-transform: uppercase;
-    border: 2px solid white;
-    width: 10rem;
-    height: 2.5rem;
-    margin-bottom: 1rem;
-
-    a {
-        color: map-get($colors, heading-1);
-        text-decoration: none;
+    #hero-buttons {
+        position: absolute;
+        top: 400px;
+        @include flex-column;
+        z-index: 5;
     }
+    
+    #hero-button {
+        @include flex-center;
+        @include margin-center;
+        text-transform: uppercase;
+        border: 2px solid white;
+        width: 10rem;
+        height: 2.5rem;
+        margin-bottom: 1rem;
+    
+        a {
+            color: map-get($colors, heading-1);
+            text-decoration: none;
+        }
+    }
+
+    @media screen and (min-width: $breakpoint-mobile) {
+        h1 {
+            top: 35%;
+            width: 70%;
+            font-size: 2.5rem;
+        }
+
+        #hero-buttons {
+            @include flex-row;
+            top: 450px;
+        }
+
+        #hero-button {
+            margin: 0 1rem;
+        }
+        
+    }
+
 }
