--- a/dev/scss/_productadvisor.scss
+++ b/dev/scss/_productadvisor.scss
@@ -25,8 +25,7 @@
 
     form {
         display: block;
-        width: 95%;
-        @include margin-center;
+        margin: 0 1rem;
 
         label, select {
             display: block;
@@ -34,6 +33,37 @@
             text-align: left;
             padding: .5rem 0;
         }
+
+        select {
+            padding: .5rem .25rem;
+            background-color: rgb(165, 163, 163);
+            color: map-get($colors, heading-3);
+            position: relative;
+            -webkit-appearance: none;
+	        -ms-appearance: none;
+		    appearance: none;
+        }
+
+        select:focus {
+            background-color: map-get($colors, heading-1);
+            outline: none;
+        }
+
+        .select-wrapper {
+            position: relative;
+        }
+
+        .select-wrapper:after {
+            position: absolute;
+            content: '▾';
+            font-size: 1.5rem;
+            color: map-get($colors, heading-3);
+            top: 3px;
+            right: 23px;
+            width: 0;
+            height: 0;
+            pointer-events: none;
+          }
 
         .find-btn input {
             display: block;
@@ -44,7 +74,9 @@
             text-transform: uppercase;
             border: none;
         }
+
     }
+
 
 
     @media screen and (min-width: $breakpoint-mobile) {
@@ -52,11 +84,17 @@
             width: 95%;
         }
 
+        p {
+            color: map-get($colors, bg-1); 
+         }
+
         form {
            @include flex-layout-row;
+           justify-content: flex-start;
 
             .form-row {
-                width: 48%;
+                width: calc(50% - 1rem);
+                margin: 0 .5rem;
             }
 
             .find-btn {
@@ -65,6 +103,10 @@
                 margin: 1.5rem 0;
                 padding: 0 .25rem;
             }
+
+            .select-wrapper:after {
+                color: map-get($colors, bg-1);
+              }
         }
     }
 
@@ -74,9 +116,10 @@
             justify-content: space-around;
  
             .form-row {
-                width: 18%;
+                width: calc(20% - 1rem);
             }
  
          }
+
     }
 }
