--- a/dev/scss/_variables_old 2.scss
+++ b/dev/scss/_variables_old 2.scss
@@ -1,6 +1,6 @@
 //font variables
-$heading-font: 'Roboto Condensed', sans-serif;
 $body-font: 'Roboto', sans-serif;
+$heading-font: 'Roboto Condensed', sans-serif;
 $line-height: 1.4;
 $heading-size: 2rem;
 $text-size: 1.5rem;
@@ -14,7 +14,7 @@ $colors: (
     heading-2: #244A64,
     heading-3: #504F4F,
     text: #000,
-    bg-1: #009ddc,
+    bg-1: #439BD6,
     bg-2: #BDDCEF,
 
 );
