--- a/dev/scss/_hamburger.scss
+++ b/dev/scss/_hamburger.scss
@@ -142,7 +142,7 @@ nav {
     transform: rotate(-45deg);
   }
 
-  @media screen and (min-width: $breakpoint-mobile){
+  @media screen and (min-width: $breakpoint-tablet) and (max-width: $breakpoint-desktop){
     .navbar {
       background-color: transparent;
       .icon{
@@ -155,10 +155,12 @@ nav {
         top:10px;
         .icon_1{
           width:30%;
+          min-width: 360px;
           @include flex-layout-row;
         }
         .icon_2{
           width:30%;
+          min-width: 320px;
           @include flex-layout-row;
         }
 
@@ -171,9 +173,9 @@ nav {
         }
         }
       }
-      .logo { 
+      .logo {
+        padding-top:15px; 
         width: 100%;
-        padding-top: 50px;
     }
 
     .logo img{
@@ -213,13 +215,55 @@ nav {
       display:none;
     }
     }
-
-    
-
-    
 }
 
-@media screen and (min-width: $breakpoint-tablet) {
+@media screen and (min-width: $breakpoint-desktop) {
+  .navbar {
+    background-color: transparent;
+    .icon{
+      width: 100%;
+      visibility: visible;
+      position:absolute;
+      display:flex;
+      flex-direction: row;
+      justify-content: space-between;
+      top:10px;
+      .icon_1{
+        width:30%;
+        min-width: 360px;
+        @include flex-layout-row;
+      }
+      .icon_2{
+        width:30%;
+        min-width: 320px;
+        @include flex-layout-row;
+      }
+
+      a{
+        text-decoration: none;
+        color:white;
+        text-transform: uppercase;
+        svg path {
+          fill: white;
+      }
+      }
+    }
+    .logo { 
+      width: 100%;
+      padding-top:15px; 
+  }
+
+  .logo img{
+      width: 200px;
+      display:block;
+      margin-left: auto;
+      margin-right: auto; 
+  }
+
+  .btn-menu {
+    display: none;
+  }
+
   nav {
     display:block;
     margin-left: auto;
@@ -228,4 +272,22 @@ nav {
     visibility: visible;
   }
 
+  nav ul {
+    background-color: rgba(34, 34, 34, 0.6);
+    position: relative;
+    top:50px;
+    display: flex;
+    justify-content: space-around;
+    padding: .25rem 1rem;
+    font-size: 20px;
+  }
+
+  nav a {
+    border: none;
+  }
+
+  li.navnone {
+    display:none;
+  }
+  }
 }
