--- a/dev/scss/_hamburger.scss
+++ b/dev/scss/_hamburger.scss
@@ -3,6 +3,7 @@
     left:0;
     right:0;
     padding: 2% 2%;
+    font-family: $body-font;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -31,7 +32,7 @@ nav {
   nav ul {
     list-style: none;
     text-align: left;
-    font-size: 25px;
+    font-size: 20px;
   }
   
   nav a {
@@ -154,14 +155,19 @@ nav {
         justify-content: space-between;
         top:10px;
         .icon_1{
-          width:30%;
+          width:20%;
           min-width: 360px;
           @include flex-layout-row;
         }
         .icon_2{
-          width:30%;
+          width:20%;
           min-width: 320px;
+          padding-right: 50px;
           @include flex-layout-row;
+          p {
+            display: block;
+            margin: 0 .25rem;
+        }
         }
 
         a{
@@ -174,7 +180,7 @@ nav {
         }
       }
       .logo {
-        padding-top:15px; 
+        padding-top:20px; 
         width: 100%;
     }
 
@@ -204,7 +210,7 @@ nav {
       display: flex;
       justify-content: space-around;
       padding: .25rem 1rem;
-      font-size: 20px;
+      font-size: 16px;
     }
   
     nav a {
@@ -229,13 +235,14 @@ nav {
       justify-content: space-between;
       top:10px;
       .icon_1{
-        width:30%;
+        width:20%;
         min-width: 360px;
         @include flex-layout-row;
       }
       .icon_2{
-        width:30%;
+        width:20%;
         min-width: 320px;
+        padding-right: 50px;
         @include flex-layout-row;
       }
 
@@ -279,7 +286,7 @@ nav {
     display: flex;
     justify-content: space-around;
     padding: .25rem 1rem;
-    font-size: 20px;
+    font-size: 16px;
   }
 
   nav a {
