--- a/dev/scss/_footer.scss
+++ b/dev/scss/_footer.scss
@@ -91,7 +91,11 @@ footer {
         .logo {
             width: 15%;
             padding: .5rem 0;
+            img{
+                width: 200px;
+            }
         }
+        
 
         .social_list {
             width: 60%;
