--- a/dev/scss/_about.scss
+++ b/dev/scss/_about.scss
@@ -9,7 +9,6 @@
     background-repeat: no-repeat;
 
     .about-text {
-        font-family: $heading-font;
         color: map-get($colors, heading-1 );
         width: 80%;
         @include margin-center;
@@ -17,12 +16,14 @@
         padding: 20% 0;
 
         h3 {
+            font-family: $heading-font;
             font-size: 2.5rem;
             font-weight: 700;
             text-transform: uppercase;
         }
 
         p {
+            font-family: $body-font;
             line-height: $line-height;
             width: 70%;
             @include margin-center;
@@ -31,6 +32,7 @@
     }
 
     a {
+        font-family: $body-font;
         color: map-get($colors, heading-1 );
         text-decoration: none;
         border: 2px solid #fff;
