--- a/dev/scss/_footer.scss
+++ b/dev/scss/_footer.scss
@@ -11,7 +11,7 @@ footer {
         padding: 1rem;
 
         img {
-            width: 100%;
+            width: 150px;
         }
     }
 
@@ -47,7 +47,7 @@ footer {
 
             a {
                 @include flex-layout-row;
-                font-size: 12px;
+                font-size: 16px;
             }
         }
 
@@ -56,7 +56,7 @@ footer {
             text-align: center;
             text-transform: uppercase;
             padding: 1.5rem 0 0;
-            font-size: 16px;
+            font-size: 12px;
         }
 
     }
