--- a/dev/scss/_hamburger.scss
+++ b/dev/scss/_hamburger.scss
@@ -143,7 +143,7 @@ nav {
     transform: rotate(-45deg);
   }
 
-  @media screen and (min-width: $breakpoint-tablet) and (max-width: $breakpoint-desktop){
+  @media screen and (min-width: $breakpoint-mobile){
     .navbar {
       background-color: transparent;
       .icon{
