--- a/dev/scss/_install.scss
+++ b/dev/scss/_install.scss
@@ -23,11 +23,12 @@
         font-size: 2.5rem;
         font-weight: 700;
         text-transform: uppercase;
-        margin-bottom: 100px;
+        margin: 80px 0;
     }
 
     a {
         font-family: $body-font;
+        font-weight: 500;
         color: map-get($colors, heading-3);
         text-decoration: none;
         text-transform: uppercase;
@@ -44,6 +45,16 @@
     min-height: 600px;
     background-repeat: no-repeat;
 
+    a {
+        font-family: $body-font;
+        font-weight: 500;
+        color: map-get($colors, heading-1);
+        text-decoration: none;
+        text-transform: uppercase;
+        border: 2px solid #fff;
+        padding: 0.5rem 1.5rem;
+    }
+
     .contact-text{
         color: map-get($colors, heading-1);
         width:60%;
@@ -57,17 +68,9 @@
         font-size: 2.5rem;
         font-weight: 700;
         text-transform: uppercase;
-        margin-bottom: 100px;
+        margin: 80px 0;
     }
 
-    a {
-        font-family: $body-font;
-        color: map-get($colors, heading-1);
-        text-decoration: none;
-        text-transform: uppercase;
-        border: 2px solid #fff;
-        padding: 0.5rem 1.5rem;
-    }
     
 }
 
@@ -80,19 +83,39 @@
 }
 
 @media screen and (min-width: $breakpoint-tablet){
+
+    #map a, #contact a {
+        background-color: map-get($colors, bg-1);
+        color: map-get($colors, heading-1);
+        border: none;
+    }
+
     #map {
         width: 50%;
         order: 2;
+
+        h3 {
+            margin: 60px 0;
+        }
+
     }
     #contact {
         width: 50%;
+
+        h3 {
+            margin: 60px 0;
+        }
+
     }
+
     .wave-blue-light {
         order: 4;
     }
+    
     .install {
         position: relative;
         display:flex;
         flex-wrap: wrap;
     }
+
 }
