--- a/dev/scss/_hamburger.scss
+++ b/dev/scss/_hamburger.scss
@@ -2,7 +2,7 @@
     position:absolute;
     left:0;
     right:0;
-    padding: 2% 2%;
+    padding: 2% 0 0 0;
     font-family: $body-font;
     display: flex;
     flex-wrap: wrap;
@@ -209,7 +209,7 @@ nav {
     nav ul {
       background-color: rgba(34, 34, 34, 0.6);
       position: relative;
-      top:50px;
+      top:10px;
       display: flex;
       justify-content: space-around;
       padding: .25rem 1rem;
@@ -229,8 +229,10 @@ nav {
 @media screen and (min-width: $breakpoint-desktop) {
   .navbar {
     background-color: transparent;
-    .icon{
-      width: 100%;
+    width: 80%;
+    @include margin-center;
+   
+    .icon{      
       visibility: visible;
       position:absolute;
       display:flex;
@@ -292,7 +294,7 @@ nav {
   nav ul {
     background-color: rgba(34, 34, 34, 0.6);
     position: relative;
-    top:50px;
+    top:10px;
     display: flex;
     justify-content: space-around;
     padding: .25rem 1rem;
