--- a/dev/scss/_hero.scss
+++ b/dev/scss/_hero.scss
@@ -8,13 +8,14 @@
         position:absolute;
         top: 150px;
         font-family: $heading-font;
-        font-size: 2.5rem;
+        font-size: 2rem;
         text-align: center;
         text-transform: uppercase;
         font-weight: bold;
         color: map-get($colors, heading-1);
         padding: 2rem;
         z-index: 5;
+        max-width: 30rem;
     }
 
     .wave-white {
@@ -32,7 +33,7 @@
         z-index: 5;
     }
     
-    #hero-button {
+    .hero-button {
         @include flex-center;
         @include margin-center;
         text-transform: uppercase;
@@ -50,7 +51,8 @@
     @media screen and (min-width: $breakpoint-mobile) {
         h1 {
             top: 15rem;
-            width: 70%;
+            font-size: 2.1rem;
+            padding: .2rem;
         }
 
         #hero-buttons {
@@ -58,7 +60,7 @@
             top: 450px;
         }
 
-        #hero-button {
+        .hero-button {
             margin: 0 1rem;
         }
         
@@ -66,7 +68,17 @@
 
     @media screen and (min-width: $breakpoint-tablet){
         h1 {
-            width: 60%;
+            max-width: 45rem;
+            font-size: 2.7rem;
+            padding: .2rem;
+        }
+    }
+
+    @media screen and (min-width: $breakpoint-desktop){
+        h1 {
+            max-width: 55rem;
+            font-size: 3.5rem;
+            padding: .2rem;
         }
     }
 
