--- a/dev/scss/_wrapper.scss
+++ b/dev/scss/_wrapper.scss
@@ -1,5 +1,5 @@
 #wrapper {
-    max-width: 100%;
+    max-width: 1920px;
     // background-color: map-get($colors, wrapper-bg-color);
     @include margin-center;
 }
