--- a/dev/scss/_footer.scss
+++ b/dev/scss/_footer.scss
@@ -16,7 +16,7 @@ footer {
     }
 
     .social_list {
-        @include flex-layout-row;
+        @include flex-layout-row-evenly;
         padding-top: 1rem;
 
         a {
@@ -26,11 +26,11 @@ footer {
 
             p {
                 display: block;
-                margin: 0 .25rem;
+                margin: 0 .1rem;
             }
 
             svg {
-                margin: 0 .5rem;
+                margin: 0 .25rem;
             }
 
             svg path {
@@ -47,7 +47,7 @@ footer {
 
             a {
                 @include flex-layout-row;
-                font-size: 16px;
+                font-size: 12px;
             }
         }
 
