--- a/dev/scss/_install.scss
+++ b/dev/scss/_install.scss
@@ -33,7 +33,10 @@
         text-decoration: none;
         text-transform: uppercase;
         border: 2px solid #504F4F;
-        padding: 0.5rem 1.5rem;
+        padding: 1rem;
+        width: 10rem;
+        height: 2.5rem;
+        margin-bottom: 1rem;
     }
 }
 
@@ -52,7 +55,10 @@
         text-decoration: none;
         text-transform: uppercase;
         border: 2px solid #fff;
-        padding: 0.5rem 1.5rem;
+        padding: 1rem;
+        width: 10rem;
+        height: 2.5rem;
+        margin-bottom: 1rem;
     }
 
     .contact-text{
