--- a/dev/scss/_footer.scss
+++ b/dev/scss/_footer.scss
@@ -7,7 +7,7 @@ footer {
     padding-bottom: 1.5rem;
 
     .logo {
-        width: 30%;
+        // width: 30%;
         padding: 1rem;
 
         img {
