--- a/dev/scss/_signup.scss
+++ b/dev/scss/_signup.scss
@@ -35,13 +35,14 @@
         form {
             display: flex;
             align-items: center;
+            justify-content: center;
             padding: 1rem;
 
         }
 
         p {
             display: block;
-            width: 50%;
+            width: 60%;
             padding: 0;
         }
 
@@ -53,7 +54,7 @@
 
     @media screen and (min-width: $breakpoint-tablet){
         form {
-            width: 70%;
+            width: 90%;
             @include margin-center;
         }
     }
@@ -61,7 +62,6 @@
     @media screen and (min-width: $breakpoint-desktop){
        p {
            font-size: 1.4rem;
-           width: 100%;
        }
     }
 }
