--- a/dev/scss/_hamburger.scss
+++ b/dev/scss/_hamburger.scss
@@ -2,7 +2,7 @@
     position:absolute;
     left:0;
     right:0;
-    padding: 2% 0 0 0;
+    padding: 2% 4% 0 0;
     font-family: $body-font;
     display: flex;
     flex-wrap: wrap;
@@ -14,6 +14,7 @@
 
 .icon {
   display:none;
+  font-size: 14px;
 }
 
 .logo img {
@@ -162,13 +163,13 @@ nav {
         .icon_2{
           width:20%;
           min-width: 320px;
-          padding-right: 70px;
+          padding-right: 20px;
           @include flex-layout-row;
           a {
             @include flex-layout-row;
             p {
               display: block;
-              margin: 0 .25rem;
+              margin: 0 .25rem 0 .5rem;
           }
           }
         }
