--- a/dev/scss/_hamburger.scss
+++ b/dev/scss/_hamburger.scss
@@ -9,6 +9,7 @@
     justify-content: space-between;
     background-color: rgba(34, 34, 34, 0.6);
     z-index: 10;
+    max-width: 120rem;
     text-transform: uppercase;
   }
 
@@ -232,6 +233,7 @@ nav {
   .navbar {
     background-color: transparent;
     width: 95%;
+    max-width: 110rem;
     @include margin-center;
    
     .icon{      
@@ -240,7 +242,7 @@ nav {
       display:flex;
       flex-direction: row;
       justify-content: space-between;
-      max-width: 120rem;
+      align-self: center;
       
       top:10px;
       .icon_1{
